# cmake-python-distributions

./: .circleci-matrix.yml  .coveragerc  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  AUTHORS.rst  CMakeLists.txt  CMakeUrls.cmake  CONTRIBUTING.rst  HISTORY.rst  LICENSE_BSD_3  MANIFEST.in  README.md  README.rst  appveyor.yml  circle-matrix.yml  circle.yml  constraints-ci.txt  manylinux-build.sh  noxfile.py  pyproject.toml  requirements-deploy.txt  requirements-dev.txt  requirements-repair.txt  requirements-test.txt  requirements.txt  scikit-ci.yml  setup.cfg  setup.py  versioneer.py
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: build.yml  update-cmake.yml  update-dependencies.yml
_build_backend/: backend.py
cmake/: __init__.py  _version.py
docs/: Makefile  build_system.rst  building.rst  conf.py  index.rst  installation.rst  make.bat  make_a_release.rst  requirements-docs.txt  requirements.txt  update_cmake_version.rst  usage.rst
scripts/: convert_to_generic_platform_wheel.py  entry-point.py.in  install-static-clang.sh  manylinux-build-and-install-openssl.sh  manylinux-build-wheels.sh  manylinux2014-aarch64-build-and-install-openssl.sh  manylinux2014-aarch64-build-and-test-wheel.sh  manylinux2014-build-and-install-openssl.sh  manylinux2014-build-and-test-wheel.sh  repair_wheel.py  update_cmake_version.py  update_openssl_version.py  utils.sh
src/cmake/: __init__.py  __init__.pyi  __main__.py  _version.py
tests/: __init__.py  test_cmake.py  test_distribution.py  test_wheel.py
